# CNN_With_Docker

./: .coveragerc  .dockerignore  .dockerignore.predict  .gitignore  Dockerfile  Dockerfile.predict  MANIFEST.in  README.md  __init__.py  predict_cnn.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  train_cnn.py
tests/: README.md  __init__.py  test_predict_cnn.py  test_train_cnn.py
