[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-cnn"
version = "1.0.0"
description = "MNIST CNN Classification with Docker - A reproducible containerised deep learning workflow"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "MNIST CNN Project"}
]
keywords = ["mnist", "cnn", "deep-learning", "pytorch", "docker", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

viz = [
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
]

all = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
]

[project.scripts]
mnist-train = "train_cnn:main"
mnist-predict = "predict_cnn:main"

[project.urls]
Homepage = "https://github.com/yourusername/mnist-cnn-docker"
Repository = "https://github.com/yourusername/mnist-cnn-docker"
Issues = "https://github.com/yourusername/mnist-cnn-docker/issues"

[tool.setuptools]
py-modules = ["train_cnn", "predict_cnn"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["train_cnn", "predict_cnn"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
