[metadata]
name = mnist-cnn
version = 1.0.0
author = MNIST CNN Project
description = MNIST CNN Classification with Docker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/mnist-cnn-docker
project_urls =
    Bug Reports = https://github.com/yourusername/mnist-cnn-docker/issues
    Source = https://github.com/yourusername/mnist-cnn-docker
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=2.0.0
    torchvision>=0.15.0
    matplotlib>=3.7.0
    numpy>=1.24.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*
    docs
    docs.*

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    scikit-learn>=1.3.0
    seaborn>=0.12.0
test =
    pytest>=7.4.0
    pytest-cov>=4.1.0
viz =
    scikit-learn>=1.3.0
    seaborn>=0.12.0

[options.entry_points]
console_scripts =
    mnist-train = train_cnn:main
    mnist-predict = predict_cnn:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.eggs,*.egg
ignore = E203, E266, E501, W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
